fixed overflow problem

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 html {
-  /* overflow: hidden; */
+  overflow: hidden;
   height: 100%;
 }
 
